# GPT2Rust

./: Cargo.toml  README.md  downloaddataset.sh
.github/: FUNDING.yml
src/: layers.rs  loader.rs  main.rs  model.rs
