[package]
name = "mini-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
nix = { version = "0.27", default-features = false, features = ["sched", "mount", "signal", "unistd"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
